grammar.js
  call: ($, argument_list) =>
    seq(
      field("function", $._basic_expression),
      field("arguments", alias(argument_list, $.argument_list))
    ),
  /**
   * @template T
   * @param {GrammarSymbols<T>} $
   * @param {RuleOrLiteral} keyword */
  infix_expression: ($, left, right) =>
    choice(
      .../** @type {[Rule, string, Function][]} */ ([
        [$._infix_operator_10r, "binary_10", prec.right],
        [$._infix_operator_10l, "binary_10", prec.left],
        [$._infix_operator_9, "binary_9", prec.left],
        [$._infix_operator_8, "binary_8", prec.left],
        [$._infix_operator_7, "binary_7", prec.left],
        [$._infix_operator_6, "binary_6", prec.left],
        [$._infix_operator_5, "binary_5", prec.left],
        [$._infix_operator_4, "binary_4", prec.left],
        [$._infix_operator_3, "binary_3", prec.left],
        [$._infix_operator_2, "binary_2", prec.left],
        [$._infix_operator_1, "binary_1", prec.left],
        [$._infix_operator_0, "binary_0", prec.left],
      ]).map(([operator, precedence, precFn]) =>
        precFn(
          precedence,
          seq(
            field("left", left),
            field("operator", operator),
            field("right", right)
          )
        )
      )
    ),
};
const WordOperators = {
  9: ["div", "mod", "shl", "shr"],
  5: ["in", "notin", "is", "isnot", "not", "of", "as", "from"],
  4: ["and"],
  3: ["or", "xor"],
};
const Operators = [
  "=",
  "+",
  "-",
  "*",
  "/",
  "<",
  ">",
  "@",
  "$",
  "~",
  "&",
  "%",
  "|",
  "!",
  "?",
  "^",
  ".",
  ":",
  "\\",
  "∙",
  "∘",
  "×",
  "★",
  "⊗",
  "⊘",
  "⊙",
  "⊛",
  "⊠",
  "⊡",
  "∩",
  "∧",
  "⊓",
  "±",
  "⊕",
  "⊖",
  "⊞",
  "⊟",
  "∪",
  "∨",
  "⊔",
];
const InfixOperators = {
  R10: token(seq("^", repeat(choice(...Operators)))),
  L10: token(seq("$", repeat(choice(...Operators)))),
  L9: token(
    seq(
      choice(
        "%",
        "\\",
        "/",
        "∙",
        "∘",
        "×",
        "★",
        "⊗",
        "⊘",
        "⊙",
        "⊛",
        "⊠",
        "⊡",
        "∩",
        "∧",
        "⊓"
      ),
      repeat(choice(...Operators))
    )
  ),
  L9Star: token(seq("*", repeat(choice(...Operators.filter(x => x != ":"))))),
  L8: token(
    seq(
      choice("+", "-", "~", "|", "±", "⊕", "⊖", "⊞", "⊟", "∪", "∨", "⊔"),
      repeat(choice(...Operators))
    )
  ),
  L7: token(seq("&", repeat(choice(...Operators)))),
  L6: token(seq(".", repeat1(choice(...Operators)))),
  L5: token(
    choice(
      seq("=", repeat1(choice(...Operators))),
      seq(choice("<", ">", "!"), repeat(choice(...Operators)))
    )
  ),
  L2: token(
    choice(
      seq(":", repeat1(choice(...Operators))),
      seq(choice("@", "?"), repeat(choice(...Operators)))
    )
  ),
  L1: token(
    seq(
      repeat1(
        choice(
          ...Operators.filter(x => !["<", ">", "!", "=", "~", "?"].includes(x))
        )
      ),
      "="
    )
  ),
  L0: token(seq(repeat(choice(...Operators)), choice("=", "-", "~"), ">")),
};

module.exports = grammar({
  name: "nim",

    source_file: $ => optional($._semi_statement_list),
    statement_list: $ =>
      choice($._block_statement_list, $._line_statement_list, $._layout_empty),

    _line_statement_list: $ => prec.right(sep1($._simple_statement, ";")),
    _block_statement_list: $ =>
      seq($._layout_start, optional($._semi_statement_list), $._layout_end),

    _semi_statement_list: $ =>
      repeat1(seq($._statement, choice(";", $._layout_terminator))),

    discard_statement: $ => Templates.return_like($, keyword("discard")),
    yield_statement: $ => Templates.return_like($, keyword("yield")),
    proc_declaration: $ => seq(keyword("proc"), $._routine_declaration),
    method_declaration: $ => seq(keyword("method"), $._routine_declaration),
    iterator_declaration: $ => seq(keyword("iterator"), $._routine_declaration),
    macro_declaration: $ => seq(keyword("macro"), $._routine_declaration),
    template_declaration: $ => seq(keyword("template"), $._routine_declaration),
    converter_declaration: $ =>
      seq(keyword("converter"), $._routine_declaration),

    _routine_declaration: $ =>
      seq(
        field("name", choice($._symbol, $.exported_symbol)),
        field("rewrite_pattern", optional($.term_rewriting_pattern)),
        field("generic_parameters", optional($.generic_parameter_list)),
        Templates.proc_type_tail($),
        optional(seq("=", field("body", $.statement_list)))
      ),
    generic_parameter_list: $ =>
      seq("[", optional($._parameter_declaration_list), $._bracket_close),
    term_rewriting_pattern: $ =>
      seq("{", alias($._semi_statement_list, $.statement_list), $._curly_close),

    const_section: $ => seq(keyword("const"), $._variable_declaration_section),
    let_section: $ => seq(keyword("let"), $._variable_declaration_section),
    var_section: $ =>
      // Prefer the interpretation of var section over var_type
      prec.dynamic(1, seq(keyword("var"), $._variable_declaration_section)),
    _variable_declaration_section: $ => section($, $.variable_declaration),
    variable_declaration: $ =>
      choice(
        seq(
          $.symbol_declaration_list,
          seq(":", field("type", $.type_expression)),
          optional(seq("=", field("value", $._expression_with_post_block)))
        ),
        seq(
          $.symbol_declaration_list,
          optional(seq("=", field("value", $._expression_with_post_block)))
        )
      ),

    type_section: $ => seq(keyword("type"), section($, $.type_declaration)),
    type_declaration: $ =>
      seq($.type_symbol_declaration, optional(seq("=", $._type_definition))),
    type_symbol_declaration: $ =>
      seq(
        field("name", choice($._symbol, $.exported_symbol)),
        optional($.generic_parameter_list),
        optional(field("pragma", $.pragma_list))
      ),
    _type_definition: $ =>
      choice(
        $.type_expression,
        $.enum_declaration,
        $.object_declaration,
        $.concept_declaration,
        alias($._distinct_declaration, $.distinct_type),
        alias($._ref_declaration, $.ref_type),
        alias($._pointer_declaration, $.pointer_type),
        alias($._tuple_declaration, $.tuple_type),
        alias($._call_extended, $.call)
      ),

    enum_declaration: $ =>
      seq(
        keyword("enum"),
        section($, repeat1(seq($.enum_field_declaration, optional(","))))
      ),
    enum_field_declaration: $ =>
      prec.right(
        seq(
          $.symbol_declaration,
          // This should be _expression proper, but doing so inflates
          // the parser states to unusable.
          optional(seq("=", field("value", $._expression)))
        )
      ),
    object_declaration: $ =>
      seq(
        keyword("object"),
        optional(field("pragma", $.pragma_list)),
        optional(seq(keyword("of"), field("inherits", $.type_expression))),
        optional(
          alias($._object_field_declaration_list, $.field_declaration_list)
        )
      ),

    _object_field_declaration_list: $ =>
      seq(
        $._layout_start,
        repeat(seq($._object_field_declaration, $._layout_terminator)),
        $._layout_end
      ),
    variant_declaration: $ => seq(keyword("case"), $._variant_declaration_body),
    _variant_declaration_body: $ =>
      prec.right(
        seq(
          $.variant_discriminator_declaration,
          optional(":"),
          repeat(
            field("alternative", alias($._of_declaration_branch, $.of_branch))
          ),
          optional($._inhibit_keyword_termination),
          optional(
            field(
              "alternative",
              alias($._else_declaration_branch, $.else_branch)
            )
          )
        )
      ),
    variant_discriminator_declaration: $ => $._identifier_declaration,
    concept_declaration: $ =>
      seq(
        keyword("concept"),
        field(
          "parameters",
          optional(alias($._concept_parameter_list, $.parameter_list))
        ),
        optional(seq(keyword("of"), field("refines", $.refinement_list))),
        optional(
          field("body", alias($._block_statement_list, $.statement_list))
        )
      ),
    refinement_list: $ => sep1($.type_expression, ","),
    _concept_parameter_list: $ => sep1($._concept_parameter, ","),
    _expression_with_post_block: $ =>
      choice(
        $._expression_with_call_do,
        alias($._call_block, $.call),
        alias($._command_block, $.call),
        alias($._dot_generic_call_block, $.dot_generic_call),
        alias($._infix_extended, $.infix_expression),
        alias($._prefix_extended, $.prefix_expression)
      ),
    _expression: $ =>
      choice(
        $._simple_expression,
        $.proc_expression,
        $.func_expression,
        $.iterator_expression,
        $.block,
        $.if,
        $.when,
        $.case,
        $.try,
        $.for
      ),
    _basic_expression: $ =>
      choice(
        $._literal,
        $._symbol,
        $.array_construction,
        $.curly_construction,
        $.tuple_construction,
        $.cast,
        $.parenthesized,
        $.dot_expression,
        $.bracket_expression,
        $.curly_expression,
        $.generalized_string,
        $.pragma_expression,
        $.object_type,
        $.tuple_type,
        $.enum_type,
        $.var_type,
        $.out_type,
        $.distinct_type,
        $.ref_type,
        $.pointer_type,
        $.dot_generic_call,
        alias($._proc_type, $.proc_type),
        alias($._iterator_type, $.iterator_type),
        alias($._call_expression, $.call),
        alias($._sigil_expression, $.prefix_expression)
      ),

    /* Structural */
    for: $ =>
      seq(keyword("for"), $._for_body, ":", field("body", $.statement_list)),
    _for_body: $ =>
      seq(
        field("left", $.symbol_declaration_list),
        keyword("in"),
        field("right", $._expression)
      ),
    of_branch: $ =>
      seq(
        alias($._case_of, "of"),
        field("values", $.expression_list),
        ":",
        field("consequence", $.statement_list)
      ),
    else_branch: $ =>
      seq(keyword("else"), ":", field("consequence", $.statement_list)),
    tuple_type: $ =>
      prec.right(
        seq(
          keyword("tuple"),
          optional(
            alias($._tuple_field_declaration_list, $.field_declaration_list)
          )
        )
      ),
    _tuple_field_declaration_list: $ =>
      seq(
        choice("[", token.immediate("[")),
        optional($._field_declaration_list),
        $._bracket_close
      ),

    _infix_operator_0: $ => alias(InfixOperators.L0, $.operator),
    _infix_operator_1: $ => alias(InfixOperators.L1, $.operator),
    _infix_operator_10r: $ => alias(InfixOperators.R10, $.operator),
    _infix_operator_10l: $ => alias(InfixOperators.L10, $.operator),
    _infix_operator_9: $ =>
      alias(
        choice(
          InfixOperators.L9,
          InfixOperators.L9Star,
          ...WordOperators[9].map(x => keyword(x))
        ),
        $.operator
      ),
    _infix_operator_8: $ => alias(InfixOperators.L8, $.operator),
    _infix_operator_7: $ => alias(InfixOperators.L7, $.operator),
    _infix_operator_6: $ => alias(InfixOperators.L6, $.operator),
    _infix_operator_5: $ =>
      alias(
        choice(
          InfixOperators.L5,
          ...WordOperators[5].filter(x => x != "not").map(x => keyword(x))
        ),
        $.operator
      ),
    _infix_operator_4: $ =>
      alias(choice(...WordOperators[4].map(x => keyword(x))), $.operator),
    _infix_operator_3: $ =>
      alias(choice(...WordOperators[3].map(x => keyword(x))), $.operator),
    _infix_operator_2: $ => alias(InfixOperators.L2, $.operator),

    dot_expression: $ =>
      prec(
        "suffix",
        seq(field("left", $._basic_expression), ".", field("right", $._symbol))
      ),
    bracket_expression: $ =>
      prec(
        "suffix",
        seq(
          field("left", $._basic_expression),
          token.immediate("["),
          field(
            "right",
            optional(alias($._colon_equal_expression_list, $.argument_list))
          ),
          $._bracket_close
        )
      ),
    tuple_construction: $ =>
      choice(
        seq("(", optional($._colon_equal_expression_list), $._paren_close)
      ),
    pragma_list: $ =>
      seq(
        "{.",
        optional($._colon_equal_expression_list),
        choice($._dot_curly_close, $._curly_close)
      ),
    expression_list: $ => prec.right(sep1(choice($._expression), ",")),
    _colon_equal_expression_list: $ =>
      prec.right(
        seq(
          sep1(
            choice(
              $._expression_with_call_do,
              $.colon_expression,
              $.equal_expression
            ),
            ","
          ),
          optional(",")
        )
      ),
    colon_expression: $ =>
      seq(field("left", $._left_hand_side), ":", field("right", $._expression)),
    _left_hand_side: $ => $._simple_expression,

    /* Symbol/identifier declaration */
    parameter_declaration_list: $ =>
      seq(
        choice("(", token.immediate("(")),
        optional($._parameter_declaration_list),
        $._paren_close
      ),
    _parameter_declaration_list: $ =>
      seq(
        sep1(
          alias($._identifier_declaration, $.parameter_declaration),
          choice(",", ";")
        ),
        optional(choice(",", ";"))
      ),
    _identifier_declaration: $ =>
      prec.right(
        seq(
          $.symbol_declaration_list,
          optional(seq(":", field("type", $.type_expression))),
          optional(seq("=", field("value", $._expression_with_post_block)))
        )
      ),
    symbol_declaration_list: $ =>
      prec.right(
        seq(
          sep1(
            choice($.symbol_declaration, $.tuple_deconstruct_declaration),
            ","
          ),
          optional(",")
        )
      ),
    tuple_deconstruct_declaration: $ =>
      seq(
        "(",
        sep1(
          choice($.symbol_declaration, $.tuple_deconstruct_declaration),
          ","
        ),
        optional(","),
        $._paren_close
      ),
    symbol_declaration: $ =>
      seq(
        field("name", choice($._symbol, $.exported_symbol)),
        optional($.pragma_list)
      ),
    exported_symbol: $ => seq($._symbol, optional($._want_export_marker), "*"),

    /* Literals */
    nil_literal: () => keyword("nil"),

    integer_literal: () =>
      token(seq(NumericLiteral, optional(/'?[iIuU](8|16|32|64)|[uU]/))),

    float_literal: () => {
      const FloatSuffix = /'?[fFdD](32|64|128)?/;

      return token(
        choice(
          seq(NumericLiteral, FloatSuffix),
          seq(DecimalFloatLiteral, optional(FloatSuffix))
        )
      );
    },

    _symbol: $ => choice($.accent_quoted, $.identifier, $.blank_identifier),
    accent_quoted: $ =>
      seq("`", repeat1(alias($._accent_quoted_identifier, $.identifier)), "`"),
    /* eslint-disable-next-line no-control-regex */
    _accent_quoted_identifier: () => /[^\x00-\x1f\r\n\t` ]+/,
    identifier: () => Identifier,

    _paren_close: $ => seq(optional($._inhibit_layout_end), ")"),
    _bracket_close: $ => seq(optional($._inhibit_layout_end), "]"),
    _curly_close: $ => seq(optional($._inhibit_layout_end), "}"),
    _dot_curly_close: $ => seq(optional($._inhibit_layout_end), ".}"),
